--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -34,10 +34,7 @@ p{
     color: #555;
 }
 .container{
-    max-width: 1300px;
     margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
 }
 .row{
     display: flex;
@@ -200,8 +197,7 @@ small{
     background: #04566E;
     color: #B4D330;
     font-size: 14px;
-    padding: 60px 0 20px;
-}
+    padding: 0px 15px 5px;}
 .footer p{
     color:  #B4D330;
 }
@@ -209,22 +205,19 @@ small{
     color: #fff;
     margin-bottom: 20px;
 }
-.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
+ .footer-col-2, .footer-col-4{
     min-width: 250px;
-    margin-bottom: 20px;
 }
-.footer-col-1{
-    flex-basis: 30%;
+.home{
+    height: 92vh;
 }
 .footer-col-2{
     flex: 1;
-    text-align: center;
 }
 .footer-col-2 img{
-    width: 180px;
-    margin-bottom: 20px;
+    height: 5vh;
 }
-.footer-col-3, .footer-col-4{
+.footer-col-4{
     flex-basis: 12%;
     text-align: center;
 }
@@ -233,12 +226,6 @@ ul{
 }
 .logo{
     display: contents;
-}
-.app-logo{
-    margin-top: 20px;
-}
-.app-logo img{
-    width: 140px;
 }
 .footer hr{
     border: none;
